--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,18 @@ body * {
     box-sizing: border-box;
     transition: all 0.256s ease-out;
     border-radius: 100%;
+    border: 1px inset rgba(0, 0, 0, 0.1);
     --box-shadow-color: rgba(255, 255, 255, 0.1);
-    --box-shadow-width: 5px;
-    box-shadow: 2.5px -2.5px var(--box-shadow-width) var(--box-shadow-color);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    backface-visibility: hidden;
+    /*box-shadow: 0 0 5px var(--box-shadow-color);*/
 }
 html,
 body {
-    background: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
     float: left;
-    width: 100%;
-    height: 100%;
+    width: 5000%;
+    height: 5000%;
     overflow: hidden;
+    backface-visibility: hidden;
 }
 body nav {
     position: absolute;
@@ -47,7 +46,7 @@ body button {
     position: relative;
     border-radius: 5% 10%;
     padding: 5px 10px;
-    background: lightblue;
+    background: rgba(255, 255, 255, 0.5);
     z-index: 5000;
 }
 molekyyli.plektra,
@@ -84,9 +83,9 @@ molekyyli.hattu * {
 }
 molekyyli {
     float: left;
-    width: 100%;
-    height: 100%;
-    position: relative;
+    width: 10%;
+    height: 10%;
+    position: absolute;
     left: 45%;
     top: 0;
     --box-shadow-color: rgba(217, 165, 32,0.1);
@@ -94,7 +93,8 @@ molekyyli {
     perspective-origin: 25% 50%;
     transform: rotatey(97deg);
     */
-    background: rgba(0, 0, 0, 0.1);
+    background: transparent;
+    border: none;
 }
 molekyyli:after,
 molekyyli:before {
@@ -105,7 +105,7 @@ vety {
     position: absolute;
     width: 5%;
     height: 5%;
-    background: rgba(255, 255, 255, 0.1);
+    background: transparent;
     --box-shadow-color: rgba(0, 0, 255, 0.1);
 }
 vety:after {
